--- a/app/design/adminhtml/default/default/template/sales/order/create/sidebar/items.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/create/sidebar/items.phtml
@@ -8,8 +8,9 @@
  * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Adminhtml_Block_Sales_Order_Create_Sidebar_Abstract $this */
 ?>
-<?php /** @var Mage_Adminhtml_Block_Sales_Order_Create_Sidebar_Abstract $this */ ?>
 <div class="create-order-sidebar-block" id="sidebar_data_<?= $this->getDataId() ?>">
     <div class="head">
         <h5><?= $this->getHeaderText() ?> <span class="normal">(<?= $this->getItemCount() ?>)</span></h5>
