--- a/app/design/adminhtml/default/default/template/sales/order/totals/tax.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/totals/tax.phtml
@@ -5,105 +5,63 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
 /** @var Mage_Adminhtml_Block_Sales_Order_Totals_Tax $this */
-/** @var Mage_Sales_Model_Order_Invoice $_source */
-$_source = $this->getSource();
-$_order = $this->getOrder();
-$_fullInfo = $this->getFullTaxInfo();
-$_weees = $this->helper('tax')->getAllWeee($_order);
-global $taxIter;
-$taxIter++;
+
+$uniqId = uniqid();
+$displayFullSummary = $this->displayFullSummary();
+$fullInfo = $this->getFullTaxInfo();
+$weees = $this->helper('tax')->getAllWeee($this->getOrder());
 ?>
 
-<?php if ($this->displayFullSummary()): ?>
-    <?php $isTop = 1; ?>
-    <?php if (isset($_fullInfo[0]['rates'])): ?>
-        <?php foreach ($_fullInfo as $info): ?>
-            <?php if (isset($info['hidden']) && $info['hidden']) continue; ?>
-            <?php
-            $percent = $info['percent'];
-            $amount = $info['amount'];
-            $baseAmount = $info['base_amount'];
-            $rates = $info['rates'];
-            $isFirst = 1;
-            ?>
-
-            <?php foreach ($rates as $rate): ?>
-                <tr class="summary-details<?php if ($isTop): echo ' summary-details-first'; endif; ?>"
-                    style="display:none;">
-                    <?php if (!is_null($rate['percent'])): ?>
-                        <td class="label"><?= $rate['title'] ?> (<?= (float)$rate['percent'] ?>%)<br/>
-                        </td>
-                    <?php else: ?>
-                        <td class="label"><?= $rate['title'] ?><br/></td>
-                    <?php endif ?>
-                    <?php if ($isFirst): ?>
-                        <td rowspan="<?= count($rates) ?>"><?= $this->displayAmount($amount, $baseAmount) ?></td>
-                    <?php endif ?>
-                </tr>
-                <?php
-                $isFirst = 0;
-                $isTop = 0;
-                ?>
-            <?php endforeach ?>
-        <?php endforeach ?>
+<?php if ($displayFullSummary && ($fullInfo || $weees)): ?>
+<tr class="summary-total" onclick="expandDetails(this, '.summary-details-<?= $uniqId ?>')">
+<?php else: ?>
+<tr>
+<?php endif ?>
+    <td class="label">
+    <?php if ($displayFullSummary): ?>
+        <div class="summary-collapse"><?= Mage::helper('sales')->__('Total Tax') ?></div>
     <?php else: ?>
-        <?php foreach ($_fullInfo as $info): ?>
-            <?php
-            $percent = $info['percent'];
-            $amount = $info['tax_amount'];
-            $baseAmount = $info['base_tax_amount'];
-            $isFirst = 1;
-            ?>
-
-            <tr class="summary-details<?php if ($isTop): echo ' summary-details-first'; endif; ?>"
-                style="display:none;">
-                <?php if (!is_null($info['percent'])): ?>
-                    <td class="label"><?= $this->escapeHtml($info['title']) ?>
-                        (<?= (float)$info['percent'] ?>%)<br/></td>
-                <?php else: ?>
-                    <td class="label"><?= $this->escapeHtml($info['title']) ?><br/></td>
-                <?php endif ?>
-                <td><?= $this->displayAmount($amount, $baseAmount) ?></td>
-            </tr>
-            <?php
-            $isFirst = 0;
-            $isTop = 0;
-            ?>
-        <?php endforeach ?>
+        <?= Mage::helper('sales')->__('Tax') ?>
     <?php endif ?>
-    <?php foreach ($_weees as $weeeTitle => $weeeAmount): ?>
-        <tr class="summary-details-<?= $taxIter ?> summary-details<?php if ($isTop): echo ' summary-details-first'; endif; ?>"
-            style="display:none;">
-            <td class="a-right" colspan="1">
+    </td>
+    <td>
+        <?= $this->displayAmount($this->getSource()->getTaxAmount(), $this->getSource()->getBaseTaxAmount()) ?>
+    </td>
+</tr>
+
+<?php if ($displayFullSummary): ?>
+    <?php foreach ($fullInfo as $info): ?>
+        <?php if ($info['hidden'] ?? false) continue ?>
+        <?php $rates = $info['rates'] ?? [$info] ?>
+        <?php foreach (array_values($rates) as $i => $rate): ?>
+            <tr class="summary-details-<?= $uniqId ?> summary-details no-display">
+                <td class="label">
+                    <?= $this->escapeHtml($rate['title']) ?>
+                    <?php if (!is_null($rate['percent'])): ?>
+                        (<?= (float) $rate['percent'] ?>%)
+                    <?php endif ?>
+                </td>
+                <?php if ($i === 0): ?>
+                <td rowspan="<?= count($rates) ?>">
+                    <?= $this->displayAmount($info['amount'] ?? $info['tax_amount'], $info['base_amount'] ?? $info['base_tax_amount']) ?>
+                </td>
+                <?php endif ?>
+            </tr>
+        <?php endforeach ?>
+    <?php endforeach ?>
+    <?php foreach ($weees as $weeeTitle => $weeeAmount): ?>
+        <tr class="summary-details-<?= $uniqId ?> summary-details no-display">
+            <td>
                 <?= $this->escapeHtml($weeeTitle) ?>
-                <br/>
             </td>
-            <td class="a-right" rowspan="1">
+            <td>
                 <?= $this->helper('checkout')->formatPrice($weeeAmount) ?>
             </td>
         </tr>
     <?php endforeach ?>
 <?php endif ?>
-<?php if ($this->displayFullSummary() && ($_fullInfo || $_weees)): ?>
-<tr class="summary-total" onclick="expandDetails(this, '.summary-details')">
-    <?php else: ?>
-<tr>
-    <?php endif ?>
-    <td class="label">
-        <div class="summary-collapse">
-            <?php if ($this->helper('tax')->displayFullSummary()): ?>
-                <?= Mage::helper('sales')->__('Total Tax') ?>
-            <?php else: ?>
-                <?= Mage::helper('sales')->__('Tax') ?>
-            <?php endif ?>
-        </div>
-    </td>
-    <td>
-        <?= $this->displayAmount($_source->getTaxAmount(), $_source->getBaseTaxAmount()) ?>
-    </td>
-</tr>
