--- a/app/design/adminhtml/default/default/template/sales/order/address/form.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/address/form.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2025 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -22,7 +22,7 @@
 </div>
 <div class="entry-edit">
     <div class="entry-edit-head">
-        <h4 class="icon-head fieldset-legend"><?= $this->getHeaderText() ?></h4>
+        <h4 class="fieldset-legend"><?= $this->getHeaderText() ?></h4>
     </div>
     <div class="fieldset">
         <?= $this->getForm()->toHtml() ?>
