--- a/app/design/adminhtml/default/default/template/sales/order/create/coupons/form.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/create/coupons/form.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
@@ -18,7 +18,7 @@
 ?>
 <div class="entry-edit box-left">
     <div class="entry-edit-head">
-        <h4 class="icon-head"><?= Mage::helper('sales')->__('Apply Coupon Code') ?></h4>
+        <h4><?= Mage::helper('sales')->__('Apply Coupon Code') ?></h4>
      </div>
      <fieldset class="np">
          <div class="content">
