--- a/app/design/adminhtml/default/default/template/sales/order/create/data.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/create/data.phtml
@@ -11,62 +11,66 @@
 
 /** @var Mage_Adminhtml_Block_Sales_Order_Create_Data $this */
 ?>
-<div class="page-create-order">
-<p class="switcher">
-<label for="currency_switcher"><?= Mage::helper('sales')->__('Order Currency:') ?></label>
-<select id="currency_switcher" name="order[currency]" onchange="order.setCurrencyId(this.value); order.setCurrencySymbol(this.options[this.selectedIndex].getAttribute('symbol'));">
-    <?php foreach ($this->getAvailableCurrencies() as $_code): ?>
-    <option value="<?= $_code ?>"<?php if($_code==$this->getCurrentCurrencyCode()): ?> selected="selected"<?php endif ?> symbol="<?= $this->getCurrencySymbol($_code) ?>"><?= $this->getCurrencyName($_code) ?></option>
-    <?php endforeach ?>
-</select>
-</p>
-    <script type="text/javascript">
-        order.setCurrencySymbol('<?= $this->jsQuoteEscape($this->getCurrencySymbol($this->getCurrentCurrencyCode())) ?>')
-    </script>
-<table cellspacing="0" width="100%">
-<tr>
-    <?php if($this->getCustomerId()): ?>
-    <td class="side-col" style="background:none; padding:0;">
-        <div id="order-sidebar"><?= $this->getChildHtml('sidebar') ?></div>
-    </td>
-    <?php endif ?>
-    <td <?php if($this->getCustomerId()): ?>class="main-col"<?php endif ?>>
-       <div id="order-additional_area" style="display:none" class="order-additional-area"><?= $this->getChildHtml('additional_area') ?></div>
-       <div id="order-search" style="display:none" class="order-search-items"><?= $this->getChildHtml('search') ?></div>
-        <div id="order-items"><?= $this->getChildHtml('items') ?></div>
-        <div id="order-errors"><?= $this->getChildHtml('errors') ?></div>
-        <div id="order-form_account"><?= $this->getChildHtml('form_account') ?></div>
-        <div id="order-addresses">
-            <div id="order-billing_address" class="box-left"><?= $this->getChildHtml('billing_address') ?></div>
-            <div id="order-shipping_address" class="box-right"><?= $this->getChildHtml('shipping_address') ?></div>
-        </div>
-        <div class="clear"></div>
-        <div id="order-methods">
-            <div id="order-billing_method" class="box-left payments"><?= $this->getChildHtml('billing_method') ?></div>
-            <div id="order-shipping_method" class="box-right"><?= $this->getChildHtml('shipping_method') ?></div>
-        </div>
 
-        <?php if($this->getChild('card_validation')): ?>
-        <div class="clear"></div>
-        <div id="order-methods">
-            <div id="order-card_validation" class="box-left payments"><?= $this->getChildHtml('card_validation') ?></div>
-        </div>
-        <?php endif ?>
+<?php if ($this->getCustomerId()): ?>
+<div id="order-sidebar">
+    <?= $this->getChildHtml('sidebar') ?>
+</div>
+<?php endif ?>
+<div class="order-grid">
+    <div class="switcher">
+        <label for="currency_switcher"><?= Mage::helper('sales')->__('Order Currency:') ?></label>
+        <select id="currency_switcher" name="order[currency]" onchange="order.setCurrencyId(this.value); order.setCurrencySymbol(this.options[this.selectedIndex].getAttribute('symbol'));">
+        <?php foreach ($this->getAvailableCurrencies() as $code): ?>
+            <?php $selected = $code == $this->getCurrentCurrencyCode() ? ' selected="selected"' : '' ?>
+            <option value="<?= $code ?>"<?= $selected ?> symbol="<?= $this->getCurrencySymbol($code) ?>">
+                <?= $this->getCurrencyName($code) ?>
+            </option>
+        <?php endforeach ?>
+        </select>
+        <script type="text/javascript">
+            order.setCurrencySymbol('<?= $this->jsQuoteEscape($this->getCurrencySymbol($this->getCurrentCurrencyCode())) ?>');
+        </script>
+    </div>
 
-        <div class="clear"></div>
-        <?= $this->getChildHtml('gift_options') ?>
+    <div id="order-additional_area" class="order-additional-area no-display">
+        <?= $this->getChildHtml('additional_area') ?>
+    </div>
 
-        <div class="clear"></div>
-        <div class="box-left entry-edit">
-            <div class="entry-edit-head"><h4><?= Mage::helper('sales')->__('Order History') ?></h4></div>
-            <fieldset id="order-comment"><?= $this->getChildHtml('comment') ?></fieldset>
-        </div>
-        <div class="box-right entry-edit">
-            <div class="entry-edit-head"><h4><?= Mage::helper('sales')->__('Order Totals') ?></h4></div>
-            <div id="order-totals" class="order-totals"><?= $this->getChildHtml('totals') ?></div>
-        </div>
-        <div class="clear"></div>
-    </td>
-</tr>
-</table>
+    <div id="order-search" class="order-search-items no-display">
+        <?= $this->getChildHtml('search') ?>
+    </div>
+
+    <div id="order-items"><?= $this->getChildHtml('items') ?></div>
+
+    <div id="order-errors"><?= $this->getChildHtml('errors') ?></div>
+
+    <div id="order-form_account">
+        <?= $this->getChildHtml('form_account') ?>
+    </div>
+
+    <div id="order-billing_address"><?= $this->getChildHtml('billing_address') ?></div>
+    <div id="order-shipping_address"><?= $this->getChildHtml('shipping_address') ?></div>
+
+    <div id="order-billing_method" class="payments"><?= $this->getChildHtml('billing_method') ?></div>
+    <div id="order-shipping_method"><?= $this->getChildHtml('shipping_method') ?></div>
+
+<?php if($this->getChild('card_validation')): ?>
+    <div id="order-methods">
+        <div id="order-card_validation" class="payments"><?= $this->getChildHtml('card_validation') ?></div>
+    </div>
+<?php endif ?>
+
+    <?= $this->getChildHtml('gift_options') ?>
+
+    <div id="order-history" class="entry-edit">
+        <div class="entry-edit-head"><h4><?= Mage::helper('sales')->__('Order History') ?></h4></div>
+        <fieldset id="order-comment"><?= $this->getChildHtml('comment') ?></fieldset>
+    </div>
+
+    <div id="order-totals" class="entry-edit">
+        <div class="entry-edit-head"><h4><?= Mage::helper('sales')->__('Order Totals') ?></h4></div>
+        <div id="order-totals2" class="order-totals"><?= $this->getChildHtml('totals') ?></div>
+    </div>
+
 </div>
