--- a/app/design/adminhtml/default/default/template/sales/order/create/giftmessage.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/create/giftmessage.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -13,24 +13,12 @@
 ?>
 <?php if ($this->canDisplayGiftmessage()): ?>
 <?php $_items = $this->getItems(); ?>
-<div id="order-giftmessage">
-<div class="clear"></div>
-<div class="giftmessage-order-create box-left">
-    <div class="entry-edit">
-        <div><?= Mage::helper('sales')->__('Gift Message for the Entire Order') ?></div><br />
-        <div class="fieldset">
-            <div>
-                <div class="entire-order">
-                    <h5><?= Mage::helper('sales')->__('You can leave a box blank if you don\'t wish to add a gift message for whole order') ?></h5>
-                    <?= $this->getFormHtml($this->getQuote(), 'main') ?>
-                </div>
-            </div>
-            <div class="clear"></div>
-        </div>
-    </div>
-</div>
+<fieldset id="order-giftmessage" class="fieldset-wide">
+    <h4><?= Mage::helper('sales')->__('Gift Message for the Entire Order') ?></h4>
+    <small><?= Mage::helper('sales')->__('You can leave a box blank if you don\'t wish to add a gift message for whole order') ?></small>
+    <?= $this->getFormHtml($this->getQuote(), 'main') ?>
+</fieldset>
 <script type="text/javascript">
     order.giftmessageFieldsBind('order-giftmessage');
 </script>
-</div>
 <?php endif ?>
