--- a/app/design/adminhtml/default/default/template/sales/order/giftoptions.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/giftoptions.phtml
@@ -5,19 +5,17 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
 /** @var Mage_Adminhtml_Block_Template $this */
 ?>
 <?php if ($this->getChildHtml()): ?>
-<div class="entry-edit">
+<div class="entry-edit box-gift-options">
     <div class="entry-edit-head">
         <h4><?= Mage::helper('sales')->__('Gift Options') ?></h4>
     </div>
-    <fieldset>
-        <?= $this->getChildHtml() ?>
-    </fieldset>
+    <?= $this->getChildHtml() ?>
 </div>
 <?php endif ?>
