--- a/app/design/adminhtml/default/default/template/sales/order/view/tab/info.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/view/tab/info.phtml
@@ -5,25 +5,21 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
 /** @var Mage_Adminhtml_Block_Sales_Order_Abstract $this */
 ?>
 <?php $_order = $this->getOrder() ?>
-<div>
-    <div id="order-messages">
+<div class="order-grid">
+    <div id="order-messages" class="box-order-messages">
         <?= $this->getChildHtml('order_messages') ?>
     </div>
     <?= $this->getChildHtml('order_info') ?>
     <input type="hidden" name="order_id" value="<?= $_order->getId() ?>"/>
-    <?php if ($_order->getIsVirtual()): ?>
-    <div class="box-right">
-    <?php else: ?>
-    <div class="box-left">
-    <?php endif ?>
-        <!--Payment Method-->
+
+    <div class="box-payment-method">
         <div class="entry-edit">
             <div class="entry-edit-head">
                 <h4><?= Mage::helper('sales')->__('Payment Information') ?></h4>
@@ -37,9 +33,9 @@
             </fieldset>
         </div>
     </div>
+
     <?php if (!$_order->getIsVirtual()): ?>
-    <div class="box-right">
-        <!--Shipping Method-->
+    <div class="box-shipping-method">
         <div class="entry-edit">
             <div class="entry-edit-head">
                 <h4><?= Mage::helper('sales')->__('Shipping &amp; Handling Information') ?></h4>
@@ -53,7 +49,7 @@
                             <?php $trackNumber = $_track->getNumber();?>
                             <strong><?= $_track->getTitle() ?></strong>
                             <span data-copy-text="<?= $trackNumber ?>"><?= $trackNumber ?></span>
-                        </div> 
+                        </div>
                     <?php endforeach; ?>
                 <?php endif ?>
                 <?php if ($_order->getShippingDescription()): ?>
@@ -77,18 +73,17 @@
         </div>
     </div>
     <?php endif ?>
-    <div class="clear"></div>
+
     <?= $this->getGiftOptionsHtml() ?>
-    <div class="clear"></div>
-    <div class="entry-edit">
+
+    <div class="entry-edit box-items-ordered">
         <div class="entry-edit-head">
             <h4><?= Mage::helper('sales')->__('Items Ordered') ?></h4>
         </div>
+        <?= $this->getItemsHtml() ?>
     </div>
-    <?= $this->getItemsHtml() ?>
-    <div class="clear"></div>
 
-    <div class="box-left">
+    <div class="box-comments-history">
         <div class="entry-edit">
             <div class="entry-edit-head">
                 <h4><?= Mage::helper('sales')->__('Comments History') ?></h4>
@@ -96,36 +91,13 @@
             <fieldset><?= $this->getChildHtml('order_history') ?></fieldset>
         </div>
     </div>
-    <div class="box-right entry-edit">
-        <div class="entry-edit-head"><h4><?= Mage::helper('sales')->__('Order Totals') ?></h4></div>
+
+    <div class="entry-edit box-order-totals">
+        <div class="entry-edit-head">
+            <h4><?= Mage::helper('sales')->__('Order Totals') ?></h4>
+        </div>
         <div class="order-totals"><?= $this->getChildHtml('order_totals') ?></div>
     </div>
-    <div class="clear"></div>
 </div>
 
 <?= $this->getChildHtml('popup_window') ?>
-<script type="text/javascript">
-//<![CDATA[
-    /**
-     * Retrieve gift options tooltip content
-     */
-    function getGiftOptionsTooltipContent(itemId) {
-        var contentLines = [];
-        var headerLine = null;
-        var contentLine = null;
-
-        $$('#gift_options_data_' + itemId + ' .gift-options-tooltip-content').each(function (element) {
-            if (element.down(0)) {
-                headerLine = element.down(0).innerHTML;
-                contentLine = element.down(0).next().innerHTML;
-                if (contentLine.length > 30) {
-                    contentLine = contentLine.slice(0,30) + '...';
-                }
-                contentLines.push(headerLine + ' ' + contentLine);
-            }
-        });
-        return contentLines.join('<br/>');
-    }
-    giftOptionsTooltip.setTooltipContentLoaderFunction(getGiftOptionsTooltipContent);
-//]]>
-</script>
